build_log_utf8.txt
cargo :     Checking astrox-template v0.0.2 
(C:\Users\jpfaj\OneDrive\Desktop\astrox-template)
At line:1 char:1
+ cargo check 2>&1 | Out-File -Encoding utf8 
build_log_utf8.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    
    Checking as...strox-template):String) [], R  
  emoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0432]: unresolved import `uuid`
 --> src\api_handlers\logistics.rs:6:5
  |
6 | use uuid::Uuid;
  |     ^^^^ use of unresolved module or 
unlinked crate `uuid`
  |
  = help: if you wanted to use a crate named 
`uuid`, use `cargo add uuid` to add it to your 
`Cargo.toml`

warning: unused import: `SurveyAnswer`
 --> src\api_handlers\surveys.rs:4:63
  |
4 | use crate::models::{HubStatus, 
SurveySection, SurveyQuestion, SurveyAnswer};
  |                                              
                 ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `NaiveDate`
 --> src\api_handlers\logistics.rs:4:14
  |
4 | use chrono::{NaiveDate, Datelike, Duration, 
Weekday};
  |              ^^^^^^^^^

warning: unused variable: `id`
  --> src\api_handlers\stratas.rs:60:25
   |
60 |     axum::extract::Path(id): 
axum::extract::Path<String>,
   |                         ^^ help: if this is 
intentional, prefix it with an underscore: `_id`
   |
   = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

For more information about this error, try 
`rustc --explain E0432`.
warning: `astrox-template` (bin 
"astrox-template") generated 3 warnings
error: could not compile `astrox-template` (bin 
"astrox-template") due to 1 previous error; 3 
warnings emitted
